Fix low contrast issues

--- a/themes/my-theme/source/css/components/_author.scss
+++ b/themes/my-theme/source/css/components/_author.scss
@@ -62,7 +62,7 @@
   text-transform: uppercase;
   margin-top: 1rem;
   font-size: 1.8rem;
-  color: $teal-700;
+  color: $teal-400;
 }
 
 .author-contribution {
@@ -262,7 +262,7 @@
   }
 
   a {
-    color: $teal-700;
+    color: $teal-400;
 
     &:hover {
       color: $teal-600;
